headlamp/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: acme-nbl
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - k3s-prd.vil.nbl.sh
      secretName: headlamp-tls
  rules:
    - host: k3s-prd.vil.nbl.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
